--- a/01_hello_world/package.json
+++ b/01_hello_world/package.json
@@ -1,4 +1,5 @@
 {
+	"private": true,
 	"name": "inferno_hello",
 	"version": "1.0.0",
 	"description": "Minimal Inferno 'Hello world' application",
@@ -16,6 +17,5 @@
 		"build": "webpack",
 		"start": "node server.js"
 	},
-	"author": "Corentin Risselin",
 	"license": "MIT"
 }
